--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/hashmap.js -o public/hashmap.bundle.js",
-    "compress": "uglifyjs public/hashmap.bundle.js -o public/hashmap.bundle.min.js"
+    "build:clean": "rimraf public/*",
+    "build:bundle": "babel src/hashmap.js -o public/hashmap.bundle.js ",
+    "build:compress": "uglifyjs public/hashmap.bundle.js -o public/hashmap.bundle.min.js",
+    "build": "npm-run-all build:*"
   },
   "keywords": [
-    "hashmap",
-    "groupBy"
+    "hashmap"
   ],
   "author": "Mariusz Szlachta",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-modules-umd": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.2",
     "uglify-js": "^3.4.9"
   },
   "dependencies": {
